app/assets/stylesheets/layout.css.scss
@import "globals/all";
@import "compass/css3";

// preloader
.spinner {
  position: fixed;
  left: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background: url(image_path("spinner.gif")) 50% 50% no-repeat #000000;
}

.email {
  background:$blue;
  padding:2rem;
  width: auto;
}

.chromeframe {
  margin: 0.2rem 0;
  background: #ccc;
  color: #000;
  padding: 0.2rem 0;
}

// Navigation
header {
  height: $headerHeight;
  .row {
    padding: 1rem;
  }
  nav {
    height: $headerHeight;
    a {
      display:block;
      width: 100%;
      float: left;
      img {
        width: 18rem;
        margin-bottom:0.5rem;
      }
    }
    ul {
      list-style: none;
      padding-left:0;
      li {
        float: left;
        display: inline-block;
        padding:0.5rem 0.75rem;
        font-size: 1.15rem;
        font-weight: bold;
        transition: all 0.25s ease-in-out;
        &:first-child {
          padding-left:0;
        }
        a {
          color:$secondaryColor;
        }
      }
    }
  }
  @media screen and (min-width: 768px) {
    nav {
      a {
        display: inline-block;
        width: auto;
      }
      ul {
        float: right;
        width: auto;
        margin-top: 1rem;
      }
    }
  }
}

// Homepage 
#home {
  section {
    &:first-child {
      background:$secondaryColor;
      background:url(image_path("dark_geometric_@2X.png"));
      border-bottom:1rem solid  black;
      border-top:1rem solid  black;
      .image {
        img {
          width: 100%;
          text-align:center;
          max-width: 25rem;
          display: block;
          margin:0 auto;
        }
      }
      h1 {
        margin: 2rem 0 1rem;
        font-weight: bold;
        font-size: 1.5rem;
      }
      p, h1, h3 {
        color: white;
        display: inline-block;
        width: 100%;
      }
      p {
        color: lighten($secondaryColor, 40%);
      }
      .button {
        display: block;
        font-size:1.5rem;
        margin-bottom: 1rem;
        text-shadow: 0 2px darken($primaryColor, 15%);
      }
    }
    &:nth-child(2) {
      .row {
        div {
          @include clearfix;
          display: block;
          h2 {
            font-size: 1.5rem;
            border-bottom: 2px dotted #ccc;
            padding-bottom: 0.5rem;
          }
          img {
            width: 20%;
            max-width: 6rem;
            float: left;
            display: inline-block;
            margin-right: 5%;
            @media screen and (min-width: 570px) { position:relative; left:2%; }
          }
          p {
            width: 75%;
            float: right;
            display: inline-block;
            @media screen and (min-width: 570px) { font-size:1.25rem; }
          }
        }
      }
    }
    &:last-child {
      h1 {
        font-size:1.85rem;
        font-weight: bold;
      }
      .button {
        display: block;
        font-size:1.5rem;
        margin-bottom: 1rem;
        text-shadow: 0 2px darken($primaryColor, 15%);
      }
    }
  }  
  @media screen and (min-width: 768px) {
    section {
      &:first-child {
        .image {
          float: left;
          width: 50%;
          img {
            width: 100%;
            margin:0 auto;
          }
        }
        .content {
          float: right;
          width: 48%;
          padding-left: 1rem;
          h1 {
            font-size: 2.45rem;
            margin-top: 4rem;
          }
          .button {
            display: inline-block;
            padding:1rem 4rem;
          }
        }
      }
      &:nth-child(2) {
        .row {
          div {
            &:nth-child(2) {
              margin:0 2%;
            }
            width: 31.5%;   
            display: inline-block;
            img {
              width: 22%;
              max-width: 6rem;
              float: left;
              display: inline-block;
            }
            p {
              width: 72%;
              float: right;
              font-size: 1rem;
              display: inline-block;
            }
          }
        }
      }
      &:last-child {
        h1 {
          font-size:2.25rem;
        }
        .button {
          display: inline-block;
          padding:1rem 4rem;
        }
      }
    }  
  }
}
        
// Resume
#resume, #portfolio {
  section {
    &:first-child {
      background:$secondaryColor;
      background:url(image_path("dark_geometric_@2X.png"));
      border-bottom:1rem solid  black;
      border-top:1rem solid  black;
      color: lighten($secondaryColor, 40%);
      h1, h2 {
        color: white;
        font-weight: bold;
      }
      h2 {
        font-size: 1.5rem;
      }
      a {
        font-size: 1.25rem;
      }
      .button {
        display: block;
        font-size:1.5rem;
        text-shadow: 0 2px darken($primaryColor, 15%);
      }
      div {
        &:first-child {
          margin-bottom: 1.5rem;
        }
        &:last-child {
          .image {
            width: 12rem;
            margin: 1rem auto 2rem;
            border-radius: 100%;
            overflow: hidden;
            border: 1rem solid rgb(255, 255, 255);
            border: 1rem solid rgba(255, 255, 255, .05);
            img {
              width: 100%;
            }
          }
        }
      }
    }
    &:last-child {
      .row {
        div {
          padding:0.85rem;
          border:1px solid #efefef;
          &:hover {
            background:$lightGrey;
          }
          h2 {
            font-size: 1.25rem;
            margin:0;
          }
          h3 {
            margin: 0.25rem 0 0;
            font-size: 0.85rem;
            color: $grey;
          }
          span {
            font-size: 0.85rem;
            color: $grey;
          }
          ul {
            margin-top: 1rem;
            font-size: 0.85rem;
            li {
              margin:0.25rem 0;
            }
          }
        }
      }
    }
  }
  @media screen and (min-width: 768px) {
    section {
      &:first-child {
        h1 {
          display:block;
        }
        span {
          font-size: 1.25rem;
          float: right;
          padding:1.75rem 0;
        }
        div {
          @include clearfix;
          &:last-child {
            .information {
              float: right;
              width: 72%;
              padding-top:1rem;
            } 
            .image {
              float: left;
              margin: 4% 0 0 0;
              width: 22%;
            }
          }
        }
        .button {
          display: inline-block;
          font-size:1.5rem;
          text-shadow: 0 2px darken($primaryColor, 15%);
        }
      }
      &:last-child {
        .row {
          div {
            width: 50%;
            float: left;
            min-height: 15rem;
          }
        }
      }
    } 
  }
}

// Portfolio
#portfolio {
  section {
    &:last-child {
      .row {
        div {
          width: 100%;
          padding:0.5rem;
        }
      }  
    }
  }
  @media screen and (min-width: 768px) {
    section {
      &:last-child {
        .row {
          div {
            width: 33%;
            float: left;
            padding:0.5rem;
          }
        }  
      }
    }
  }
}

// Footer
#footer {
  background:$lightGrey;
  .row {
    div {
      width: 100%;
    }
  }
  img {
    width:10rem;
    margin-bottom: 1rem;
  }
  p {
    color: $grey;
    font-size: 0.8rem;
  }
  a {
    margin:0 0.75rem 1rem 0;
    display: block;
    &:hover {
      text-decoration: none;
    }
  }
  a[title$="social"] {
    display: inline-block;
  }

  [class^="icon-"], [class*=" icon-"] {
    font-size: 2.75rem;
    color:$grey;
    &:hover {
      color:darken($grey, 20%);
    }
  }
  @media screen and (min-width: 768px) {
    .row {
      div {
        width: 29.333333%;
        display: inline-block;
        float: left;
        margin-right: 1.5rem;
      }
    }
  }
}

